--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,41 @@
-<button class="btn btn-primary" (click)="addSnackbar()">
-  addSnackbar()
-</button>
-
+<form [formGroup]="configForm">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <h1>Snackbar</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="form-group">
+          <label for="type">Example select</label>
+          <select class="form-control" id="type">
+            <option *ngFor="let type of snackbarTypes">{{ type }}</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="icon">Icon</label>
+          <input type="text" class="form-control" id="icon">
+        </div>
+        <div class="form-group">
+          <label for="timeout">Timeout</label>
+          <input type="number" class="form-control" id="timeout">
+        </div>
+        <div class="form-group">
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <label class="input-group-text" for="inputGroupSelect01">
+                  <i class="fa fa-fw" [ngClass]="['fa-' + configForm.get('icons').value]"></i>
+                </label>
+              </div>
+              <select class="custom-select" id="inputGroupSelect01" formControlName="icons">
+                <option *ngFor="let icon of allIcons" [value]="icon">{{ icon }}</option>
+              </select>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
 <snackbar></snackbar>
 
