--- a/src/app/snackbar/snackbar.component.html
+++ b/src/app/snackbar/snackbar.component.html
@@ -1,5 +1,5 @@
 <div class="snackbar-container d-flex flex-column">
-  <div [@snackbarAnimation] class="alert d-flex align-items-center" [ngClass]="['alert-' + snackbar.config.type]" role="alert" *ngFor="let snackbar of snackbars; let index = index;">
+  <div [@SnackbarAnimation] class="alert d-flex align-items-center" [ngClass]="['alert-' + snackbar.config.type]" role="alert" *ngFor="let snackbar of snackbars; let index = index;">
     <i class="fa fa-fw" [ngClass]="['fa-' + snackbar.config.icon]" style="margin-right: 10px;"></i>
     
     <small [innerHTML]="snackbar.config.message"></small>
