--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,8 @@
           </select>
         </div>
         <div class="form-group">
-          <label for="timeout">Timeout</label>
-          <input type="number" class="form-control" id="timeout" formControlName="timeout">
+					<label for="timeout">Timeout</label>
+					<input type="number" class="form-control" id="timeout" formControlName="timeout">
         </div>
         <div class="form-group">
             <div class="input-group">
@@ -26,7 +26,7 @@
               </div>
               <select class="custom-select" id="inputGroupSelect01" formControlName="icons">
                 <option *ngFor="let icon of allIcons" [value]="icon">{{ icon }}</option>
-              </select>
+							</select>
             </div>
 				</div>
 				<div class="form-group">
@@ -43,7 +43,13 @@
           <button class="btn btn-primary" type="submit" (click)="addSnackbar()" [disabled]="!configForm.valid">
 						Add Snackbar
 					</button>
-        </div>
+				</div>
+				
+				<div class="form-group">
+					<button class="btn btn-primary" type="submit" (click)="addCustomSnackbar()">
+						Add Custom Snackbar
+					</button>
+				</div>
       </div>
     </div>
   </div>
